[package]
name = "tanks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
resolver = "2" # Important! wgpu/Bevy needs this!

[dependencies]
unicode-segmentation = ">= 1.10.1"
termion = ">= 2.0.1"

thiserror = ">= 1.0.49"

bevy = ">= 0.11.3"

[dev-dependencies]
anyhow = ">= 1.0.75"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
